--- a/az_healthcheck.yaml
+++ b/az_healthcheck.yaml
@@ -1,11 +1,16 @@
 ---
-allowed_failed_checks: 0
-options:
-  status_file_name: '/var/run/az_health_check.status'
-httpchecks:
-  identme:
-    url: "http://ident.me/"
+browserAgent: azh
+check_mk_service_name: az_healthcheck
+checkInterval: 3000
+port: 3000
+statusFile: az_healthcheck_status.json
+
+hosts:
+  tomcat7:
+    name: tomcat7
+    url: http://0.0.0.0:8080/
+  http:
+    name: http
+    url: http://0.0.0.0:80/
     headers:
-      "X-Browser-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.87 Safari/537.36"
-  slasdot:
-    url: "https://www.slashdot.org/"
+      'X-Browser-Agent': 'Firefox'
