--- a/azhealthcheck.yaml
+++ b/azhealthcheck.yaml
@@ -5,11 +5,23 @@ checkInterval: 3000
 port: 3000
 
 hosts:
+
   tomcat7:
     name: tomcat7
     url: http://0.0.0.0:8080/
-  http:
-    name: http
+
+  apache2-http:
+    name: apache2-http
     url: http://0.0.0.0:80/
     headers:
       'X-Browser-Agent': 'Firefox'
+
+  apache2-https:
+    name: apache2-https
+    url: https://0.0.0.0:443/
+    headers:
+      'X-Browser-Agent': 'AZ HealthCheck'
+    clientcertfilename:   /Users/devon.hubner/code/ssl-certificates/prod_techops_monitoring_ca/sub-ca/test.crt
+    clientkeyfilename:    /Users/devon.hubner/code/ssl-certificates/prod_techops_monitoring_ca/sub-ca/test.key
+
+
