--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+.DS_Store
+.bak
+*~
+*.swp
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
